<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android1="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <!-- Linear layout within scroll view -->
	<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
    
    	<!-- Instructions title -->
    	<TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center"
 		android:textSize="@dimen/text_size_title" />
    

        <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="horizontal"
	    android:gravity="center_vertical"
	    android:paddingTop="10dp"
        android:paddingBottom="10dp">
	        
		 <TextView
		android:layout_width="180dp"
		android:layout_height="wrap_content"
		android:text="@string/step_1"
		android:textColor="@color/white"
		android:textSize="@dimen/text_size" />
		     
		  <!--  Finger and Phone Image -->
		 <ImageView
		 android:layout_width="120dp"
		 android:paddingLeft="10dp"
		 android:layout_height="wrap_content"
		 android:contentDescription="@string/dummy_string"
		 android:adjustViewBounds="true"
		 android:src="@drawable/finger" />     
		</LinearLayout>
         
         
        <!-- Step 2 -->
        <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/step_2"
		android:textColor="@color/white"
		android:textSize="@dimen/text_size" />
        
        <!-- Step 3 - Linear Layout -->
        <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="horizontal"
	    android:gravity="center_vertical"
	    android:paddingTop="10dp"
        android:paddingBottom="10dp">
	        
		<TextView
		android:layout_width="180dp"
		android:layout_height="wrap_content"
		android:text="@string/step_3"
		android:textColor="@color/white"
		android:textSize="@dimen/text_size" />
		     
		 <!--  Beats per minute -->
		 <ImageView
		 android:layout_width="100dp"
		 android:paddingLeft="10dp"
		 android:layout_height="wrap_content"
		 android:contentDescription="@string/dummy_string"
		 android:adjustViewBounds="true"
		 android:src="@drawable/bpm" />  
		</LinearLayout>
        
	    <!-- Step 4 - Linear Layout -->
        <LinearLayout 
        android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="horizontal"
	    android:gravity="center_vertical"
	    android:paddingTop="10dp"
        android:paddingBottom="10dp">
	        
		<TextView
		android:layout_width="180dp"
		android:layout_height="wrap_content"
		android:text="@string/step_4"
		android:textColor="@color/white"
		android:textSize="@dimen/text_size" />
		     
		 <!--  Questions Image -->
		 <ImageView
		 android:layout_width="120dp"
		 android:paddingLeft="10dp"
		 android:layout_height="wrap_content"
		 android:contentDescription="@string/dummy_string"
		 android:adjustViewBounds="true"
		 android:src="@drawable/questions" />  
		</LinearLayout>
	        

</LinearLayout>
</ScrollView>
